# solana-nervous-system

./: .gitignore  .railwayignore  .vercelignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README-MOBILE.md  README.md  ROADMAP.md  SECURITY.md  build.sh  install.sh  nixpacks.toml  railway.json  start-daemon.sh  start.sh  task.md  test-connection.js  test-server.js
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: npm-publish.yml  security-audit.yml  slsa.yml
.vercel/: project.json
dashboard/: middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/api/daemon/[...path]/: route.ts
dashboard/app/landing/: page.tsx
dashboard/app/network/: page.tsx
dashboard/components/: ActivityFeed.tsx  BatchHistory.tsx  EarningsPanel.tsx  Globe.tsx  MeshPanel.tsx  MobileNodePanel.tsx  PerformancePanel.tsx  PrivacyPanel.tsx  StatsPanel.tsx  WalletPanel.tsx
dashboard/lib/: secure-fetch.ts
docs/: ARCHITECTURE.md  RELAY_SETUP.md  SECURITY.md  SYSTEM_REQUIREMENTS.md  USER_GUIDE.md
mobile-app/: app.json  babel.config.js  eas.json  index.js  metro.config.js  package.json  pnpm-lock.yaml  polyfills.js  tailwind.config.js
mobile-app/android/: build.gradle  gradle.properties
mobile-app/android/app/src/main/java/network/solnet/app/: MainApplication.kt  SolnetDaemonModule.kt  SolnetDaemonPackage.kt
mobile-app/app/: _layout.tsx  index.tsx
mobile-app/app/(onboarding)/: connect-wallet.tsx  start-node.tsx  welcome.tsx
mobile-app/app/(tabs)/: _layout.tsx  earnings.tsx  index.tsx  network.tsx  settings.tsx
mobile-app/app/settings/: privacy.tsx
mobile-app/components/earnings/: EarningsCounter.tsx  EarningsPanel.tsx
mobile-app/components/node/: NodeRankBadge.tsx  NodeStatusCard.tsx  NodeToggle.tsx  PulseIndicator.tsx  ReactorCore.tsx  SwipeToActivate.tsx
mobile-app/components/terminal/: TerminalFeed.tsx
mobile-app/components/ui/: GlassCard.tsx  MonoCounter.tsx  NeonText.tsx  PressButton.tsx
mobile-app/constants/: antigravity.ts  theme.ts
mobile-app/hooks/: useDeviceGovernor.ts  useEarnings.ts  useLocalNodeStats.ts  useNodeStatus.ts  useWallet.android.ts  useWallet.ios.ts  useWallet.ts
mobile-app/ios/SOLNET/: SOLNET-Bridging-Header.h  SolnetDaemon.m  SolnetDaemon.swift
mobile-app/scripts/: build-native.sh
mobile-app/services/: DaemonBridge.ts  SolanaClient.ts  Storage.ts  backgroundTask.ts  solnetApi.ts
mobile-app/stores/: earningsStore.ts  nodeStore.ts
mobile-app/types/: index.ts
patched_crates/: README.md
patched_crates/aes-gcm-siv/: Cargo.toml
scripts/: benchmark.sh  build_android.sh  build_ios.sh  install-pi.sh  railway-ping.js  solnet.service
sdk/: .npmignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
sdk/src/: bootstrap.ts  index.ts
sns-daemon/: .env.example  .gitignore  Cargo.toml  Cross.toml  Procfile  build.rs  start_daemon.sh
sns-daemon/benches/: latency_bench.rs
sns-daemon/include/: solnet_ffi.h
sns-daemon/src/: attack_prevention.rs  battery_guard.rs  config.rs  consensus.rs  geo_router.rs  identity.rs  latency_engine.rs  lib.rs  light_client.rs  load_balancer.rs  main.rs  mobile_governor.rs  onion.rs  p2p.rs  parallel_executor.rs  peer_guard.rs  platform.rs  relay_client.rs  rpc_proxy.rs  security.rs  sharding.rs  telemetry.rs  verifier.rs  wallet_rewards.rs  zk_payments.rs
sns-daemon/tests/: mesh_integration.rs
sns-native/: Cargo.toml
sns-native/src/: battery_guard.rs  lib.rs  mobile_governor.rs  mobile_peer.rs  p2p_node.rs  relay_client.rs
sns-program/: .anchor-version  Anchor.toml  Makefile  SNSodnAC2kZDwWCZw8nLuScx3FgX8f2ZNDo9tAUxmSC.json  package-lock.json  package.json
sns-program/.anchor/test-ledger/: faucet-keypair.json  genesis.tar.bz2  stake-account-keypair.json  test-ledger-log.txt  validator-keypair.json  vote-account-keypair.json
sns-program/.anchor/test-ledger/rocksdb/: 000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  IDENTITY  LOG  LOG.old.1775602720641223  MANIFEST-000021  OPTIONS-000027  OPTIONS-000029
sns-program/programs/sns-program/: Cargo.toml
sns-program/programs/sns-program/src/: lib.rs
sns-program/tests/: sns-program.ts
