[package]
name = "sns-daemon"
version = "2.1.0"
edition = "2021"
authors = ["SOLNET Enterprise"]
description = "Enterprise-grade decentralized RPC mesh daemon"

[[bin]]
name = "sns-daemon"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.74"
anyhow = "1.0.75"
axum = { version = "0.7.1", features = ["macros"] }
base64 = "0.21.5"
chrono = { version = "0.4.31", features = ["serde"] }
dashmap = "6.0.1"
dotenv = "0.15.0"
futures = "0.3.29"
hex = "0.4.3"
libp2p = { version = "0.52.4", features = ["tcp", "dns", "websocket", "noise", "yamux", "kad", "identify", "ping", "macros", "tokio"] }
reqwest = { version = "0.11.22", features = ["json", "rustls-tls"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
sha2 = "0.10.8"
tokio = { version = "1.33.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors", "fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.5.0", features = ["v4", "serde"] }
rand = "0.8.5"
ed25519-dalek = "1.0.1"
x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }
aes-gcm = "0.10.3"
hmac = "0.12.1"
tower = { version = "0.4.13", features = ["util", "timeout"] }
time = "=0.3.36"

[features]
# Cleaned up features

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "latency_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

# Mobile Cross-Compilation Targets (V1.2 Prep)
[package.metadata.mobile]
targets = [
    "aarch64-apple-ios",
    "x86_64-apple-ios",
    "aarch64-linux-android",
    "armv7-linux-androideabi"
]
