[package]
name = "sns-daemon"
version = "2.1.1"
edition = "2021"
authors = ["SOLNET Enterprise"]
description = "Enterprise-grade decentralized RPC mesh daemon"

[[bin]]
name = "sns-daemon"
path = "src/main.rs"

[dependencies]
solnet_native = { package = "sns-native", path = "../sns-native" }
async-trait = "0.1.74"
anyhow = "1.0.75"
axum = { version = "0.7.1", features = ["macros"] }
base64 = "0.21.5"
chrono = { version = "0.4.31", features = ["serde"] }
dashmap = "6.0.1"
futures = "0.3.29"
hex = "0.4.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
sha2 = "0.10.8"
tokio = { version = "1.33.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors", "fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.5.0", features = ["v4", "serde"] }
rand = "0.8.5"
thiserror = "1.0"
ed25519-dalek = { version = "2.1.0", features = ["rand_core", "serde"] }
x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }
aes-gcm = "0.10.3"
hmac = "0.13.0"
tower = { version = "0.4.13", features = ["util", "timeout"] }
rustls = "0.23"
libp2p-connection-limits = "0.6.0"

# Security: explicit feature control
[dependencies.libp2p]
version = "0.55.0"
features = [
    "kad",
    "identify",
    "autonat", 
    "relay",
    "dcutr",
    "noise",
    "yamux",
    "tcp",
    "quic",
    "websocket",
    "dns",
    "mdns",
    "tokio",
    "macros",
    "ping",
]

[features]
default = []
mdns = ["libp2p/mdns"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "latency_bench"
harness = false



# Financial counters (earnings_lamports, pending_lamports) must NEVER
# silently wrap. overflow-checks = true causes a panic (then abort)
# instead of silent u64 corruption. Performance cost is negligible.

