[package]
name = "sns-program"
version = "0.1.0"
description = "Solana Nervous System — on-chain node registry, staking, and payment settlement"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sns_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
